increasing width of tool panel to avoid horizontal scrolling for simulations grid

--- a/CRBM-Viz/src/styles.scss
+++ b/CRBM-Viz/src/styles.scss
@@ -298,7 +298,7 @@ p:last-child {
     .ag-tool-panel-wrapper {
         border-left: 1px solid #BDC3C7;
         border-right-color: #BDC3C700;
-        width: 140px;
+        width: 150px;
         .ag-column-select-panel {
             border-bottom: none;
         }
@@ -346,7 +346,7 @@ p:last-child {
 }
 
 .grid.tool-panel-open .ag-status-bar {
-    margin-left: calc(20px + 140px + 3px + 1rem);
+    margin-left: calc(20px + 150px + 3px + 1rem);
 }
 
 .grid-col-groups {
